2011-06-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	maintcheck: avoid few spurious failures
	* Makefile.am (sc_tests_plain_aclocal, sc_tests_plain_perl,
	sc_tests_plain_autoconf, sc_tests_plain_automake,
	sc_tests_plain_autoupate): Be stricter in matching an erroneous
	literal command, i.e., `aclocal', `automake', `perl', etc.

2011-06-20  Bert Wesarg <bert.wesarg@googlemail.com>  (tiny change)

	check: don't use multi-line coloring for the report
	"less -R" can't handle multi-line coloring as it is done for the
	check reports of the serial and parallel testsuite, because of
	performance reasons.  Thus, color each line of the check report
	by its own.
	* lib/am/check.am (am__text_box): Accept colors for lines, and
	color each line by its own.
	[%?PARALLEL_TESTS%] $(TEST_SUITE_LOG): Let am__text_box handle
	the line coloring.
	[!%?PARALLEL_TESTS%] $(check-TESTS): Color each report line by
	its own.
	* THANKS: Update.

2011-06-18  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: AM_DISTCHECK_CONFIGURE_FLAGS is for corner cases
	* doc/automake.texi (Checking the Distribution): Explain that the
	developers should take care of making their code buildable without
	requiring any special configure options, so that in general
	AM_DISTCHECK_CONFIGURE_FLAGS shouldn't be used.  Give an example
	of where its use is legitimate.
	Suggestions from Ralf Wildenhues and Eric Blake.

2011-06-14  Stefano Lattarini  <stefano.lattarini@gmail.com>

	ansi2knr: deprecate, it will go away in the next major release
	* doc/automake.texi: Loudly and repeatedly state that the old
	de-ANSI-fication features are now deprecated and will be removed
	in the next major Automake release.  Other related adjustments.
	* lib/Automake/Options.pm (_process_option_list ): Give a warning
	in the `obsolete' category when the `ansi2knr' option is used.
	* m4/protos.m4 (AM_C_PROTOTYPES): Deprecate this macro: a warning
	in the `obsolete' category will be emitted it if is used.