@@ -1,3 +1,11 @@
+2011-06-21  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	maintcheck: extend 'sc_tests_plain_*' checks
+	* Makefile.am (sc_tests_plain_autom4te): New check.
+	(sc_tests_plain_autoreconf): Likewise.
+	(sc_tests_plain_autoheader): Likewise.
+	(syntax_check_rules): Update.
+
 2011-06-20  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	maintcheck: avoid few spurious failures
